--- a/angelo/package.json
+++ b/angelo/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^11.3.19",
     "next": "14.2.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-typing-effect": "^2.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
