--- a/angelo/package.json
+++ b/angelo/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.0",
     "react-typing-effect": "^2.0.5"
   },
   "devDependencies": {
